# usb-human-name

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  release.yml
Google_tests/: CMakeLists.txt  DBFileLoadTest.cpp
Google_tests/data/: usb.ids
usb-human-name_lib/: CMakeLists.txt  exported.h  library.cpp  library.h  usb-human-name.cpp  usb-human-name.h
